# issueops

./: .gitignore  .pre-commit-config.yaml  .triage_cache.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  audit_fastapi_fastapi.csv  broken_rules.yaml  debug_fetch.py  debug_json_logic.py  feed.xml  job_board.html  main.py  mock_event.json  mypy.ini  parth-p-parekh-seedlings-8a5edab282632443.txt  pyproject.toml  requirements.txt  rules.yaml  verify_config.py  verify_dupe_logic.py  verify_phase1.py  verify_phase2.py
.github/: issueops.yaml
.github/workflows/: ci.yml
app/: __init__.py  output1.txt
app/cli/: main.py  run_command.txt  templates.py
app/core/: __init__.py  circuit_breaker.py  config.py  rate_limiter.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  cache.py  duplicate_service.py  extractor.py  github_service.py  github_service_extension.txt  logic.py  reporter.py  triage.py
app/templates/: board.html  feed.xml
data/: output.txt
data/examples/: .keep  crash_issue.txt
tests/: conftest.py  output.txt  test_cache.py  test_circuit_breaker.py  test_duplicate_service.py  test_extractor.py  test_github_service.py  test_logic.py  test_rate_limiter.py  test_reporter.py  test_triage.py
