[project]
name = "issueops"
version = "1.0.0"
description = "Automated Issue Triage & Governance as Code."
authors = [
    {name = "Anmol Sen", email = "anmol@issueops.dev"},
]
dependencies = [
    "typer[all]",
    "google-genai>=2.5.0",
    "pydantic>=2.5.0",
    "PyYAML",
    "rich",
    "httpx",
    "jinja2",
    "python-dotenv",
]
requires-python = ">=3.11"

[project.scripts]
issueops = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli/templates.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
